--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/rosenbr/Portfolio#readme",
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.15.4",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "method-override": "^3.0.0",
